
*** CORE/CPU ***
Fix WPC General Illumination (GI) Dimming (most noticably if more than one GI line is involved, also all 8 levels are now handled properly)
Added Cosmic Flash sound emulation (Bell stole it from Bally's Squalk&Talk, but removed speech and DAC chips)
Improved Zaccaria 11178 sound emulation a little (clown, poolcham, bbeltzac, mexico, zankor, spooky)

*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade, inkochnito, flipprojets.fr, Idleman
Correct Dumps:
Bell: Cosmic Flash (sound ROM - might need a redump because it contains an illegal instruction in one byte?)
      Super Bowl (sound ROM redump showed one byte of difference)

Clones:
Dracula (One Ball MOD)
Lightning (Free Play & MOD rev. 25)
Metallica 0.52
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Spirit (initial release) & rev. 3 (MOD)
Tommy 1.02 (Belgian)
White Water P-6 (Prototype)
Wildfyre (One Ball MOD)

Removed Clones:
Star Trek: The Next Generation S7/DS (as these were just created to be able to use a P-1 sound rom, (for now) wired to P-4 instead)
White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)



Version 3.5 (October 23rd, 2022) - "Trick or Treat"
------------------------------------------------------------------------------

Saving NVRAM for Juegos Populares

More gracefully handle parsing errors in invalid altsound CSV files to avoid crashes

Updated LISY support to 5.28-76 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'Home' Pinballs)

Updated to zlib 1.2.13

VS2022 build support

*** CORE/CPU ***
Better handle flickering lamps on Sega/Stern Whitestar machines
Fixed sound command parsing for more (all?) Sega/Stern Whitestar machines, so altsound mode 1 should work much better now for these, incl. global volume control parsing
Added global volume control parsing for altsound mode 1 on the older WPCs (i.e. non-DCS)